# kv-extractor-mcp-server

./: Dockerfile  README.md  pyproject.toml  smithery.yaml
src/kv_extractor_mcp_server/: server.py
src/pydantic_ai_mcp_server/: server.py
