[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "kv-extractor-mcp-server"
version = "0.1.0"
description = "Flexible Key-Value Extraction MCP Server using LLM and pydantic-ai"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fastmcp",
    "pydantic-ai>=0.1.4",
    "pydantic>=2.0",
    "PyYAML",
    "toml",
    "spacy",
    "langdetect",
]

[tool.setuptools]
packages = ["kv_extractor_mcp_server"]
package-dir = {"" = "src"}

[project.scripts]
kv-extractor-mcp-server = "kv_extractor_mcp_server.server:initialize_and_run_server"